cosyvoice_token_prompt

--- a/configs_model/configs_gpt/configs_training_cosyvoice.yaml
+++ b/configs_model/configs_gpt/configs_training_cosyvoice.yaml
@@ -20,8 +20,8 @@ task_training:
 loss_target: TTS # TTS, ASR, or TTS_ASR
 dataset:
   path_dir:
-    - "/home/ldap-users/s2220411/Code/new_explore_tts/MachineSpeechChain_ASRU25/dataset/Cosyvoice2Token/LibriTTS"
-    #- "/home/ldap-users/s2220411/Code/new_explore_tts/MachineSpeechChain_ASRU25/dataset/Cosyvoice2Token/EARS_en_US"
+    #- "/home/ldap-users/s2220411/Code/new_explore_tts/MachineSpeechChain_ASRU25/dataset/Cosyvoice2Token/LibriTTS"
+    - "/home/ldap-users/s2220411/Code/new_explore_tts/MachineSpeechChain_ASRU25/dataset/Cosyvoice2Token/EARS_en_US"
   langs:
     - "English"
   train_files:
@@ -43,7 +43,7 @@ training:
   num_workers: 6 # Number of workers for DataLoader
   evaluation_strategy: "epoch"
   learning_rate: 1e-4
-  output_dir: !ref "result/TTS_result/ImageSpeechGeneration_Final_Cosyvoce_Prompt/LibriTTS_1e4_4Layer_16alpha_16rank_BS14_RemoveDup_KeepPunctuation"
+  output_dir: !ref "result/TTS_result/ImageSpeechGeneration_Final_Cosyvoce_Prompt/EARS_1e4_4Layer_16alpha_16rank_BS14"
   per_device_train_batch_size: 14 #32 #10 #8 #16 #32 # 32
   per_device_eval_batch_size: 14 #32 #10 #8 #16 #32 # 32
   num_train_epochs: 1000
@@ -63,7 +63,7 @@ training:
   #adam_beta2: 0.98
   #adam_epsilon: 1e-6
   early_stopping: false
-  save_iterations: 500 #2500 # 200 #5000 #10000 #1000
+  save_iterations: 2500 # 200 #5000 #10000 #1000
   keep_last_n_checkpoints: 5
   early_stopping_patience: 5
 
@@ -88,7 +88,7 @@ speech_config:
   text_vocab_size: 32100
   vocab_speech_size: 6563
   hidden_size: 512
-  n_speech_extra_layers: 6
+  n_speech_extra_layers: 4
   freeze_image_backbone: True
 
 
