--- a/configs_model/configs_gpt/configs_training_cosyvoice.yaml
+++ b/configs_model/configs_gpt/configs_training_cosyvoice.yaml
@@ -26,7 +26,7 @@ dataset:
     - "English"
   train_files:
     - "train.json"
-    #- "train-clean-100.json"
+    - "train-clean-100.json"
     #- "train-clean-360.json"
     #- "train-other-500.json"
   dev_files:
@@ -42,8 +42,8 @@ preprocessing:
 training:
   num_workers: 6 # Number of workers for DataLoader
   evaluation_strategy: "epoch"
-  learning_rate: 1e-5
-  output_dir: !ref "result/TTS_result/ImageSpeechGeneration_Final_Cosyvoce_PromptV2/EARS_1e5_4Layer_16alpha_16rank_BS14_T5"
+  learning_rate: 1e-4
+  output_dir: !ref "result/TTS_result/ImageSpeechGeneration_Final_Cosyvoce_PromptV2/EARS_Libris100_1e4_4Layer_16alpha_16rank_BS14_CLIP"
   per_device_train_batch_size: 14 #32 #10 #8 #16 #32 # 32
   per_device_eval_batch_size: 14 #32 #10 #8 #16 #32 # 32
   num_train_epochs: 1000
