--- a/configs_model/configs_gpt/configs_training_cosyvoice.yaml
+++ b/configs_model/configs_gpt/configs_training_cosyvoice.yaml
@@ -27,15 +27,12 @@ dataset:
   train_files:
     - "train.json"
     - "train.json"
-    - "train.json"
-    - "train.json"
-    - "train.json"
     - "train-clean-100.json"
-    - "train-clean-360.json"
-    - "train-other-500.json"
+    #- "train-clean-360.json"
+    #- "train-other-500.json"
   dev_files:
     - "dev.json"
-    - "dev_libris.json"
+    #- "dev_libris.json"
   train_samples: 1000000000 # 500, 1000, 2000, 3000
   dev_samples: 1000000000 # 100000 # 500, 1000, 2000, 3000
 
@@ -48,7 +45,7 @@ training:
   num_workers: 6 # Number of workers for DataLoader
   evaluation_strategy: "epoch"
   learning_rate: 1e-4
-  output_dir: !ref "result/TTS_result/ImageSpeechGeneration_Final_Cosyvoce_PromptV2/EARSx5_Libris960_1e4_8Layer_16alpha_16rank_BS14_T5_fintuneLibris"
+  output_dir: !ref "result/TTS_result/ImageSpeechGeneration_Final_Cosyvoce_PromptNorm/test/EARSx3_Libris100_1e4_6Layer_16alpha_16rank_BS14_CLIP_fintuneLibris"
   per_device_train_batch_size: 14 #32 #10 #8 #16 #32 # 32
   per_device_eval_batch_size: 14 #32 #10 #8 #16 #32 # 32
   num_train_epochs: 1000
@@ -93,7 +90,7 @@ speech_config:
   text_vocab_size: 32100
   vocab_speech_size: 6563
   hidden_size: 512
-  n_speech_extra_layers: 8
+  n_speech_extra_layers: 6
   freeze_image_backbone: True
 
 
