--- a/configs_model/configs_gpt/configs_training_cosyvoice.yaml
+++ b/configs_model/configs_gpt/configs_training_cosyvoice.yaml
@@ -27,8 +27,9 @@ dataset:
   train_files:
     - "train.json"
     - "train.json"
-    - "train-clean-100.json"
-    #- "train-clean-360.json"
+    - "train.json"
+    #- "train-clean-100.json"
+    - "train-clean-360.json"
     #- "train-other-500.json"
   dev_files:
     - "dev.json"
@@ -44,8 +45,8 @@ preprocessing:
 training:
   num_workers: 6 # Number of workers for DataLoader
   evaluation_strategy: "epoch"
-  learning_rate: 1e-4
-  output_dir: !ref "result/TTS_result/ImageSpeechGeneration_Final_Cosyvoce_PromptNorm/test/EARSx3_Libris100_1e4_6Layer_16alpha_16rank_BS14_CLIP_fintuneLibris"
+  learning_rate: 1e-6
+  output_dir: !ref "result/TTS_result/ImageSpeechGeneration_Final_Cosyvoce_Prompt/test/EARSx3_Libris360_1e6_8Layer_16alpha_16rank_BS14"
   per_device_train_batch_size: 14 #32 #10 #8 #16 #32 # 32
   per_device_eval_batch_size: 14 #32 #10 #8 #16 #32 # 32
   num_train_epochs: 1000
@@ -65,7 +66,7 @@ training:
   #adam_beta2: 0.98
   #adam_epsilon: 1e-6
   early_stopping: false
-  save_iterations: 2500 # 200 #5000 #10000 #1000
+  save_iterations: 500 # 200 #5000 #10000 #1000
   keep_last_n_checkpoints: 5
   early_stopping_patience: 5
 
@@ -90,7 +91,7 @@ speech_config:
   text_vocab_size: 32100
   vocab_speech_size: 6563
   hidden_size: 512
-  n_speech_extra_layers: 6
+  n_speech_extra_layers: 8
   freeze_image_backbone: True
 
 
